--- a/_site.yml
+++ b/_site.yml
@@ -1,4 +1,4 @@
-name: "CE001"
+name: "CE085"
 output_dir: "."
 exclude: ["README.md"]
 output:
@@ -13,7 +13,7 @@ output:
       collapsed: false
       smooth_scroll: false
 navbar:
-  title: "CE001"
+  title: "CE085"
   left:
     - text: "Home"
       href: index.html
@@ -25,26 +25,13 @@ navbar:
       href: recursos.html
     - text: "Materiais"
       menu:
-      - text: "Introdução à Análise Exploratória de Dados [PDF]"
-        href: Slides/Aula1.pdf
-      - text: "Probabilidaes [PDF]"
-        href: Slides/Aula2.pdf
-      - text: "Variáveis aleatórias discretas [PDF]"
-        href: Slides/Aula3.pdf
-      - text: "Medidas resumo [PDF]"
-        href: Slides/Aula4.pdf
-      - text: "Variáveis bidimensionais [PDF]"
-        href: Slides/Aula5.pdf
-      - text: "Variáveis aleatórias contínuas [PDF]"
-        href: Slides/Aula6.pdf
-      - text: "Inferência estatística [PDF]"
-        href: Slides/Aula7.pdf
-      - text: "R script - Inferência estatística"
-        href: Slides/Script1.R
-      - text: "Teste de hipóteses [PDF]"
-        href: Slides/Aula8.pdf
-      - text: "Tópicos Especiais [PDF]"
-        href: Slides/Aula9.pdf
+      - text: "Ferramentas de probabilidade [PDF]"
+        href: Slides/Primer.pdf
+      - text: "Notas de aula Bent Jorgensen [PDF]"
+        href: Slides/Notes.pdf
+      - text: "Métodos Computacionais para Inferência estatística [PDF]"
+        href: Slides/masterSINAPE.pdf
+        
   right:
     - text: GitHub
-      href: https://github.com/wbonat/ce001m-2017-1
+      href: https://github.com/wbonat/CE085
