--- a/_site.yml
+++ b/_site.yml
@@ -26,7 +26,7 @@ navbar:
     - text: "Listas de exercícios"
       menu:
       - text: "Lista 1 - Revisão de probabilidade [PDF]"
-        href: Lista/Lista1.pdf
+        href: Slides/Lista1.pdf
     - text: "Materiais"
       menu:
       - text: "Ferramentas de probabilidade [PDF]"
